--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,9 @@
   			<version>9.4.7.v20170914</version>
   		</plugin>
   		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>3.7.0</version>
-  			<configuration>
-  			<source>1.6</source>
-  			<target>1.6</target>
-  			</configuration>
+  			<groupId>org.eclipse.jetty</groupId>
+  			<artifactId>jetty-maven-plugin</artifactId>
+  			<version>9.4.7.v20170914</version>
   		</plugin>
   	</plugins>
   </build>
